force-app/src/objects/TR1__Rate__c.object
<CustomObject>
    <fields>
        <fullName>TR1__ACA_Fee_Percentage__c</fullName>
        <description>Acc:11/28:Created for W-008782 - Quest Group - ACA Fee on Invoices</description>
        <label>ACA Fee Percentage</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__ACA_Fee_Value__c</fullName>
        <description>Acc:11/28:Created for W-008782 - Quest Group - ACA Fee on Invoices</description>
        <label>ACA Fee Value</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Rates</relationshipLabel>
        <relationshipName>Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Admin_Fee_Percentage__c</fullName>
        <label>Admin Fee Percentage</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Admin_Fee_Value__c</fullName>
        <label>Admin Fee Value</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__All_Inclusive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>W-008887 :- Field Use to Capture the Inclusive Rates</description>
        <label>All Inclusive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Billable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>W-008391 :- Flag to capture billable</description>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__COE_Pension_Default_Value__c</fullName>
        <label>COE/Pension Default Value</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__COE_Pension_Percentage__c</fullName>
        <label>COE/Pension Percentage</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__COE_Pension_Value__c</fullName>
        <label>COE/Pension Value</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Cloned_From__c</fullName>
        <label>Cloned From</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__ClosingReport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closing Report</label>
        <referenceTo>TR1__Closing_Report__c</referenceTo>
        <relationshipLabel>Rates</relationshipLabel>
        <relationshipName>Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Date_Valid_From__c</fullName>
        <label>Date Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Date_Valid_To__c</fullName>
        <label>Date Valid To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Expense_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Acc:11/20:W-008786 Created For Tie Rates To Expenses.</description>
        <label>Expense Report</label>
        <referenceTo>TR1__Expense_Report__c</referenceTo>
        <relationshipLabel>Rates</relationshipLabel>
        <relationshipName>Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Inclusive_Rate__c</fullName>
        <description>W-008887 :- Captures the Inclusive Amount When All Inclusive check box is checked</description>
        <label>Inclusive Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job</label>
        <referenceTo>TR1__Job__c</referenceTo>
        <relationshipLabel>Rates</relationshipLabel>
        <relationshipName>Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Margin_Percentage__c</fullName>
        <label>Margin Percentage</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Margin_Value__c</fullName>
        <label>Margin Value</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Maximum_Billable_Amount__c</fullName>
        <description>Acc:11/20:W-008786 Created For Tie Rates To Expenses.</description>
        <label>Maximum Billable Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Maximum_Pay_Rate__c</fullName>
        <label>Maximum Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Minimum_Pay_Rate__c</fullName>
        <label>Minimum Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__PRSI_NI_Percentage__c</fullName>
        <label>PRSI/NI Percentage</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__PRSI_NI_Value__c</fullName>
        <label>PRSI/NI Value</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__RateBill__c</fullName>
        <label>Rate (Bill)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__RatePay__c</fullName>
        <label>Rate (Pay)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Rate_Type_Name__c</fullName>
        <formula>TR1__TimeType__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Type Name Hidden</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__TimeType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Type</label>
        <referenceTo>TR1__TimeType__c</referenceTo>
        <relationshipLabel>Rates</relationshipLabel>
        <relationshipName>Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Timesheet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Timesheet</label>
        <referenceTo>TR1__Timesheet__c</referenceTo>
        <relationshipLabel>Rates</relationshipLabel>
        <relationshipName>Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Total_Cost__c</fullName>
        <label>Total Cost</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__VMS_Fee_Percentage__c</fullName>
        <description>Acc:Created for W-008782 to add VMS Fee</description>
        <label>VMS Fee Percentage</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__VMS_Fee_Value__c</fullName>
        <description>Acc:W-008782-Add VMS Fee on invoice PDF.</description>
        <label>VMS Fee Value</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Working_Time_Default_Value__c</fullName>
        <label>Working Time Default Value</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Working_Time_Percentage__c</fullName>
        <label>Working Time Percentage</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Working_Time_Value__c</fullName>
        <label>Working Time Value</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Rate</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rates Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rates</pluralLabel>
    <recordTypes>
        <fullName>TR1__AccountRate</fullName>
        <active>true</active>
        <label>Account Rate</label>
    </recordTypes>
    <recordTypes>
        <fullName>TR1__Closing_Report_Rate</fullName>
        <active>true</active>
        <label>Closing Report Rate</label>
    </recordTypes>
    <recordTypes>
        <fullName>TR1__Expense_Rate</fullName>
        <active>true</active>
        <description>Acc:11/20:W-008786 Created For Tie Rates To Expenses.</description>
        <label>Expense Rate</label>
    </recordTypes>
    <recordTypes>
        <fullName>TR1__Job_Rate</fullName>
        <active>true</active>
        <label>Job Rate</label>
    </recordTypes>
    <recordTypes>
        <fullName>TR1__Timesheet_Rate</fullName>
        <active>true</active>
        <label>Timesheet Rate</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>